--- a/src/ManUtdBot.Functions/ManUtdBot.Functions.csproj
+++ b/src/ManUtdBot.Functions/ManUtdBot.Functions.csproj
@@ -21,5 +21,5 @@
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
   </ItemGroup>
-  <Import Project="..\..\Shared1\Shared1.projitems" Label="Shared" />
+  <Import Project="..\Shared\Shared1.projitems" Label="Shared" />
 </Project>
