added tweet filters. added additional twitter api methods

--- a/src/ManUtdBot.Functions/ManUtdBot.Functions.csproj
+++ b/src/ManUtdBot.Functions/ManUtdBot.Functions.csproj
@@ -26,8 +26,11 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
+    <None Update="Sync\FilterService\KeyPhrasesFilter.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Sync\FilterService\TwitterUsers.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
