--- a/Shared1/Shared.csproj
+++ b/Shared1/Shared.csproj
@@ -8,7 +8,7 @@
     <PackageReference Include="Azure.Identity" Version="1.2.2" />
     <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.1.0" />
     <PackageReference Include="DSharpPlus" Version="3.2.3" />
-    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="3.1.7" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.7" />
   </ItemGroup>
 
 </Project>
