--- a/src/ManUtdBot.Functions/ManUtdBot.Functions.csproj
+++ b/src/ManUtdBot.Functions/ManUtdBot.Functions.csproj
@@ -17,6 +17,9 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Shared\Shared.csproj" />
+  </ItemGroup>
+  <ItemGroup>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
